countdown timer working fine

--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -258,6 +258,7 @@ a{
 } 
 #display-fintech-quiz-page #displayFintechQuizScore, #display-cashe-quiz-page #displayCasheQuizScore, #display-bhanix-quiz-page #displayBhanixQuizScore, #display-competitive-analysis-quiz-page #displayCompetitiveAnalysisQuizScore
 {
+    display : block;
     position : absolute;
     top : 27%;
     left : 7%;
@@ -395,11 +396,7 @@ a{
         overflow-y: hidden;
   }
    */
-   #quizLink
-   {
-        text-decoration : none;
-   }
-   .quizzes.selected
+   .quizzTitle.selected
    {
     background-color : orange;
    }
