--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -124,6 +124,7 @@ body
     height : 60px;
     max-height : 60px; 
 }
+
 .videos, .word-doc, .word-docs, .ppt-docs, .pdf-doc, .pdf-docs, .links, .quiz-topics, .documents
 {
     border : 1px solid black;
@@ -133,11 +134,11 @@ body
     height : 60px;
     max-height : 60px;   
 }
-.word-doc, .pdf-doc, .ppt-docs, .links, .quiz-topics, .videos, .documents
+.word-doc, .pdf-doc, .ppt-docs, .links, .quiz-topics, .videos
 {
     padding-left : 40px;
 }
-.word-docs, .pdf-docs, .fintechQuestions, .casheQuestions, .bhanixQuestions, .competitiveAnalysisQuestions
+.word-docs, .pdf-docs, .fintechQuestions, .casheQuestions, .bhanixQuestions, .competitiveAnalysisQuestions, .documents
 {
     padding-left : 60px;
     padding-right : 15px;
@@ -258,7 +259,6 @@ a{
 } 
 #display-fintech-quiz-page #displayFintechQuizScore, #display-cashe-quiz-page #displayCasheQuizScore, #display-bhanix-quiz-page #displayBhanixQuizScore, #display-competitive-analysis-quiz-page #displayCompetitiveAnalysisQuizScore
 {
-    display : block;
     position : absolute;
     top : 27%;
     left : 7%;
@@ -396,7 +396,12 @@ a{
         overflow-y: hidden;
   }
    */
-   .quizzTitle.selected
+   #quizLink
    {
-    background-color : orange;
+        text-decoration : none;
+   }
+
+   .selected
+   {
+    background-color : orange !important;
    }
