--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -24,7 +24,7 @@ div.CASHe-topics-list
     background-color : white;
     border-top : 1px solid black;
 }
-div.word-doc{
+div.word-doc, div.documents{
     overflow-y:auto;
 }
 #displayDIV
@@ -134,11 +134,11 @@ body
     height : 60px;
     max-height : 60px;   
 }
-.word-doc, .pdf-doc, .ppt-docs, .links, .quiz-topics, .videos
+.word-doc, .pdf-doc, .ppt-docs, .links, .quiz-topics, .videos, .documents
 {
     padding-left : 40px;
 }
-.word-docs, .pdf-docs, .fintechQuestions, .casheQuestions, .bhanixQuestions, .competitiveAnalysisQuestions, .documents
+.word-docs, .pdf-docs, .fintechQuestions, .casheQuestions, .bhanixQuestions, .competitiveAnalysisQuestions
 {
     padding-left : 60px;
     padding-right : 15px;
@@ -404,4 +404,8 @@ a{
    .selected
    {
     background-color : orange !important;
+   }
+   .unselected
+   {
+    background-color : orange;
    }
