developers credit added

--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -4,10 +4,19 @@
     margin-top : 0px !important;
     text-align : center;
     background-color: orange;
-    color : white;
-    padding-top : 13px;
+    padding-top : 10px;
     padding-bottom : 10px;
     height : 80px;
+}
+#developers_credit
+{
+    position : absolute;
+    bottom : 7px;
+    right : 10px;
+    top : 95.5%;
+    font-weight: bold;
+    text-align : right;
+    padding-right : 15px;
 }
 
 div.CASHe-topics-list
