--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -1,16 +1,16 @@
 #welcome-heading
 {
-    position : sticky;
+    position : absolute;
     margin-top : 0px !important;
     text-align : center;
     background-color: orange;
-    padding-top : 17px;
-    padding-bottom : 10px;
-    height : 80px;
+    padding-top : 1.5%;
+    height : 12.5%;
+    width : 100%;
 }
 #developers_credit
 {
-    position : absolute;
+    position : fixed;
     bottom : 7px;
     right : 10px;
     top : 95.5%;
@@ -19,6 +19,20 @@
     padding-right : 15px;
 }
 
+th,td{
+    padding-top : 10px;
+}
+
+.doc-tile
+{
+    height : 30%;
+    width : 30%;
+}
+.png-doc-tile
+{
+    height : 10%;
+    width : 10%
+}
 @media only screen
 {
     div.CASHe-topics-list
@@ -28,7 +42,6 @@
         top : 12.4%;
         height : 87.6%;
         overflow-x: hidden;
-        overflow-y: scroll;
         scrollbar-color : orange white;
         width : 25%;
         left : 0;
@@ -42,6 +55,7 @@ div.word-doc, div.documents{
 }
 #displayDIV, #display-quiz-pages
 {
+    
     border : 4px solid black;
     position : absolute;
     height : 80%;
@@ -51,6 +65,19 @@ div.word-doc, div.documents{
     max-width : 80%; */
     top : 18.5%;
     left : 28.5%;  
+}
+.doc-display-screen
+{
+    overflow-y : auto;
+    border : 4px solid black;
+    position : absolute;
+    height : 80%;
+    width : 60%;
+    height : 70%;
+    /* min-width: 71.5%;
+    max-width : 80%; */
+    top : 18.5%;
+    left : 28.5%; 
 }
 #cashe-logo
 {
@@ -157,6 +184,7 @@ button
 
 body
 {
+    overflow-y : auto;
     font-family : tahoma;
 }
 .vid:hover, .videos:hover, .word-doc:hover, .documents:hover, .word-docs:hover, .pdf-doc:hover, .pdf-docs:hover, .ppt-docs:hover, .links:hover, .links-websites:hover, .ppt:hover, .documentation:hover, .fintechQuestions:hover, .casheQuestions:hover, .bhanixQuestions:hover, .competitiveAnalysisQuestions:hover, #quiz:hover, .quiz:hover, .quiz-topics:hover
