--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -41,6 +41,141 @@
         height : 100%;
         display : block;
     }
+    #cashe-logo1
+    {
+        position : absolute;
+        height : 70px;
+        width : 200px;
+        margin-top : 1%;
+        left : 1%;
+    }
+    /* ------------------------------------------------------------------------------- */
+    /* homepage */
+    /* =========*/
+
+    .more
+    {
+        /* display : inline-block; */
+        /* text-align : center; */
+        font-size : 20px;
+        left : 43%;
+        position : absolute;
+        top : 90%;
+        /* text-decoration: underline; */
+        color : blue;
+    }
+
+    .business
+    {
+        position : absolute;
+        border-radius : 10%;
+        top : 20%;
+        height : 400px;
+        width : 300px;
+        align-items : center;
+        /* background-color : silver; */
+        background-color : #dcdcdc;
+        left : 30px;
+    }
+    #business-image
+    {
+        position : absolute;
+        padding : 10%;
+        border-radius : 50%;
+        left : 4.5%;
+        height : 70%;
+        width : 90%;
+    }
+    .business-text, .tech-text
+    {
+        top : 60%;
+        text-align : center;
+        position : relative;   
+    }
+    .tech
+    {
+        position : absolute;
+        border-radius : 10%;
+        top : 20%;
+        height : 400px;
+        width : 300px;
+        /* background-color : silver; */
+        background-color : #dcdcdc;
+
+        left :350px;
+    }
+    #tech-image
+    {
+        
+        position : absolute;
+        padding : 10%;
+        /* left : 4.5%; */
+        height : 70%;
+        width : 100%;
+    }
+    /* ------------------------------------------------------------------------------- */
+    /* business-page */
+    /* --------------*/
+    .business-page
+    {
+        left : 60px;
+        border-radius : 1%;
+        background-color : #dcdcdc;
+        position : absolute;
+        height : 80%;
+        width : 90%;
+    }
+   
+    .individual-business
+    {
+        background-color : white;
+        border : 2px solid black;
+        position : absolute;
+        top : 3%;
+        left : 3%;
+        border-radius : 5%;
+        height : 200px;
+        width : 200px;
+    }
+    #business-intelligence-logo
+    {
+        position : absolute;
+        height : 100px;
+        width : 100px;
+        left : 50px;
+    }
+    
+    .business-intelligence
+    {
+        position : absolute;
+        top : 3%;
+        border-radius : 5%;
+        left : 5%;
+        background : white;
+        height : 200px;
+        width : 200px;
+    }
+    #bi
+    {
+        height : 100px;
+        width : 100px;
+    }
+    #bi-text
+    {
+        position : absolute;
+        top : 70%;
+    }
+
+    /* ------------------------------------------------------------------------------- */
+    .heading
+    {
+        color : black;
+        font-size : 20px;
+        margin : auto;
+        left : 30%;
+        position : absolute;
+   
+    }
     .doc-tile
     {
         height : 100px;
@@ -53,7 +188,7 @@
         width : 10%
     }
 
-        div.CASHe-topics-list
+        div.CASHe-topics-list, .business-topics-list
         {
             position : absolute;
             overflow : auto;
@@ -500,4 +635,37 @@
     {
         background-color : orange;
     }
+
+    /* ----------------------------------------------------------*/
+    /* Business page */
+
+    .business-intelligence-topics
+    {
+        border : 1px solid black;
+        cursor : pointer;
+        display  : none;
+        color : white;
+        height : 60px;
+        max-height : 60px; 
+    }
+    .bi:hover, .collections:hover, .customer_support:hover, .fintech-eco-system:hover, .growth:hover, .product:hover, .operations:hover
+    {
+        background-color : rgb(255,153,51);
+    }
+    .bi, .collections, .customer_support, .fintech-eco-system, .growth, .product, .operations
+    {
+        cursor : pointer;
+        font-weight : bold;
+        border : 1px solid black;
+        font-size : 15x;
+        background-color : rgb(64,64,64);
+        color : white;
+        padding-left : 20px;
+        padding-top : 6.5%;
+        height : 60px;
+        max-height : 60px; 
+        border-top : 1px solid black;
+    }
+
+    /* -------------------------------------------------------- */
 }
