--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -64,7 +64,29 @@
         /* text-decoration: underline; */
         color : blue;
     }
-
+    .tiles-alignment
+    {
+        position : absolute; 
+        top : 22%;
+        left : 10%;
+    }
+    .quiz-section
+    {
+        position : absolute;
+        border-radius : 10%;
+        top : 20%;
+        float : right;
+        height : 400px;
+        width : 300px;
+        align-items : center;
+        /* background-color : silver; */
+        background-color : #dcdcdc;
+        left : 670px;
+    }
+    .quiz-section:hover, .business:hover, .tech:hover
+    {
+        background-color : rgb(255,153,51);
+    }
     .business
     {
         position : absolute;
@@ -86,7 +108,7 @@
         height : 70%;
         width : 90%;
     }
-    .business-text, .tech-text
+    .business-text, .tech-text, .quiz-text
     {
         top : 60%;
         text-align : center;
@@ -112,6 +134,15 @@
         /* left : 4.5%; */
         height : 70%;
         width : 100%;
+    }
+    #quiz-image
+    {
+        position : absolute;
+        padding : 10%;
+        top : 3%;
+        left : 1%;
+        height : 70%;
+        width : 100%; 
     }
     /* ------------------------------------------------------------------------------- */
     /* business-page */
@@ -154,11 +185,6 @@
         background : white;
         height : 200px;
         width : 200px;
-    }
-    #bi
-    {
-        height : 100px;
-        width : 100px;
     }
     #bi-text
     {
@@ -639,20 +665,11 @@
     /* ----------------------------------------------------------*/
     /* Business page */
 
-    .business-intelligence-topics
-    {
-        border : 1px solid black;
-        cursor : pointer;
-        display  : none;
-        color : white;
-        height : 60px;
-        max-height : 60px; 
-    }
-    .bi:hover, .collections:hover, .customer_support:hover, .fintech-eco-system:hover, .growth:hover, .product:hover, .operations:hover
+    .business-topics:hover, .sub-topics:hover
     {
         background-color : rgb(255,153,51);
     }
-    .bi, .collections, .customer_support, .fintech-eco-system, .growth, .product, .operations
+    .business-topics, .sub-topics
     {
         cursor : pointer;
         font-weight : bold;
@@ -665,6 +682,21 @@
         height : 60px;
         max-height : 60px; 
         border-top : 1px solid black;
+    }
+    .sub-topics
+    {
+        padding-left: 20%;
+        /* display : none; */
+    }
+    .display-screen
+    {
+        position : absolute;
+        left : 28%;
+        top : 15%;
+        height : 80%;
+        width : 70%;
+       
+        border : 4px solid black;
     }
 
     /* -------------------------------------------------------- */
