--- a/css/casheLearnings.css
+++ b/css/casheLearnings.css
@@ -68,7 +68,7 @@
     {
         position : absolute; 
         top : 22%;
-        left : 10%;
+        left : 13%;
     }
     .quiz-section
     {
@@ -665,11 +665,11 @@
     /* ----------------------------------------------------------*/
     /* Business page */
 
-    .business-topics:hover, .sub-topics:hover
+    .business-topics:hover, .video-recordings:hover, .articles:hover
     {
         background-color : rgb(255,153,51);
     }
-    .business-topics, .sub-topics
+    .business-topics, .video-recordings, .articles
     {
         cursor : pointer;
         font-weight : bold;
@@ -683,10 +683,15 @@
         max-height : 60px; 
         border-top : 1px solid black;
     }
-    .sub-topics
+    .business-topics.selected, .video-recordings.selected, .articles.selected
+    {
+        background-color : orange;
+    }
+    
+    .video-recordings, .articles
     {
         padding-left: 20%;
-        /* display : none; */
+        display : none;
     }
     .display-screen
     {
